--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 pulumi>=3.0.0,<4.0.0
 pulumi-digitalocean>=4.0.0,<5.0.0
 pyyaml>=6.0.0,<7.0.0
+pulumi_tls>=4.0.0,<5.0.0
+pulumi_command>=0.9.0,<1.0.0
+pytest
