feat: Open port 443 in Pulumi.workloads.yaml
Added an ingress rule to Pulumi.workloads.yaml to open port 443 for TCP traffic from all IP addresses (0.0.0.0/0).

--- a/Pulumi.workloads.yaml
+++ b/Pulumi.workloads.yaml
@@ -37,6 +37,11 @@ config:
           sources:
             addresses:
               - 0.0.0.0/0
+        - protocol: tcp
+          port-range: "443"
+          sources:
+            addresses:
+              - 0.0.0.0/0
       egress-rules:
         - protocol: tcp
           port-range: "all"
